kube/default-web.yaml
apiVersion: v1
kind: Service
metadata:
  name: default-web
  namespace: $KUBE_NAMESPACE
spec:
  type: NodePort
  selector:
    name: default-web
  ports:
    - port: 80
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: default-web
spec:
  replicas: 1
  template:
    metadata:
      labels:
        name: default-web
    spec:
      containers:
      - image: "nginx"
        imagePullPolicy: Always
        name: nginx
        ports:
        - containerPort: 80
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 15
          timeoutSeconds: 15
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          timeoutSeconds: 3
